Fix a few warnings
Signed-off-by: Muntashir Al-Islam <muntashirakon@riseup.net>